--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -32,6 +32,7 @@
 </head>
 <body>
 	<h1 id="title">MLB Stadiums - OpenShift Roadshow</h1>
+	<h2>Changes made to the Github Repo triggered this!!</h2>
 	<div id="map"></div>
 	<script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script> 
 	<script>
